task_3/deployemptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apped
  name: apped
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apped
  template:
    metadata:
      labels:
        app: apped
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
      volumes:
        - name: cache-volume
          emptyDir: {}
