task_3/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: minio-app
  labels:
    app: minio-app
spec:
  selector:
    app: minio
  ports:
    - port: 9001
      targetPort: 9001
  type: ClusterIP
status:
  loadBalancer: {}
